<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Electricity Measure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_meter_readings_label">Add new readings</string>
    <string name="about_label">About</string>
    <string name="about">This app helps you manage and save even more on your prepaid electricity.Copyright © 2014, <b>didi motivated workX</b> </string>
    <string name="motivation">didi motivated workX</string>
    <string name="time_summary">Just tell us the time at which you always check the meter reading.</string>
    <string name="check_time">Check Time</string>
    <string name="show_your_meter_stats">Meter Statistics</string>
    <string name="and_string"> and </string>
    <string name="day_one">Day one</string>
    <string name="day_two">Day two</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="val">100</string>
    <string name="update_data">Update Readings</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_confirm">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="family_number_desc">Just tell us how many people you live with.</string>
    <string name="meter_number_desc">Input your meter number so you always have it with you</string>
    <string name="meter_number">Meter number.Safe keeping</string>
    <string name="number_of_people">Number of people in house</string>
    <string name="not_required">Not required</string>

    <string name="recharged">Recharged</string>
    <string name="recharged_statistics">Recharged Statistics</string>


    <string name="got">Got</string>
    <string name="last_three_readings">Last 3 Readings</string>
    <string name="place_holder">11 Sept and 12 Sept</string>


    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="reading">Reading</string>
    <string name="note">Note</string>
    <string name="notes">lorem ipsum derum superun osen hmel xrel pgbsh ssnb sasaj sakjsajsas asjhas</string>

    <string name="edit_text_day_hint">Eg:   26/06/</string>
    <string name="edit_text_time_hint">Eg: 17:00</string>
    <string name="edit_text_readings_hint">Eg: 106,7</string>
    <string name="edit_text_note_hint">Eg: In the Morning</string>


    <string name="button_save">Save</string>
    <string name="last_three_days">Usage of last 3 days</string>
    <string name="ago">recharged with 70, 7 days ago</string>
    <string name="and_got">received 100kwh</string>
    <string name="and_finish_date">will finish in 10 days</string>
    <string name="recharged_statistics_usages">Your Usages</string>
    <string name="usage_state">You using above normal</string>
    <string name="usage_this_month">you have used 300 in the past 31 days</string>

</resources>
