<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="time"
        android:summary="@string/time_summary"
        android:title="@string/check_time"
        android:id="@+id/settings_set_time"
        android:text=""/>

    <EditTextPreference
        android:key="meterNumber"
        android:summary="@string/meter_number_desc"
        android:id="@+id/meter_number"
        android:inputType="number"
        android:title="Meter number"
        />

    <EditTextPreference
        android:key="familyNumber"
        android:summary="@string/family_number_desc"
        android:title="number of people you live with"
        android:id="@+id/family_number"
        android:inputType="number"
        android:text=""/>


</PreferenceScreen>
