<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/new_meter_readings_label"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"
       />

    <item
        android:id="@+id/action_stats"
        android:title="@string/show_your_meter_stats"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom"
        android:orderInCategory="150"/>

    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/about_label"
        android:orderInCategory="300"/>



</menu>
