<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textViewDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        />
    <EditText
        android:id="@+id/editTextDay"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/edit_text_day_hint"
        android:layout_above="@+id/textViewTime"
        android:layout_alignLeft="@+id/editTextTime"
        android:layout_alignStart="@+id/editTextTime" />
     <!--SET DATE PICKER HERE -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_alignEnd="@id/textViewDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/editTextDay"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:textSize="40sp"
        android:layout_below="@id/textViewDay"
        />
    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/textViewTime"
        android:hint="@string/edit_text_time_hint"
        android:layout_below="@id/editTextDay"
        android:inputType="time"
        android:onClick="showTimePickerDialog"
        />

    <TextView
        android:id="@+id/textViewReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:textSize="40sp"
        android:layout_below="@id/textViewTime"
        />
    <EditText
        android:id="@+id/editTextReading"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/textViewReading"
        android:hint="@string/edit_text_readings_hint"
        android:layout_below="@id/editTextDay"
        android:inputType="numberDecimal"

        />


    <TextView
    android:id="@+id/textViewNote"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/note"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="false"
    android:textSize="40sp"
    android:layout_below="@id/textViewReading"
    />
    <EditText
    android:id="@+id/editTextNote"
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:layout_alignParentTop="false"
    android:layout_alignParentRight="true"
    android:layout_alignBaseline="@id/textViewNote"
    android:hint="@string/edit_text_note_hint"
    android:layout_below="@id/editTextReading"
    android:inputType="textMultiLine"
    />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/button_save"
        android:id="@+id/button_save"
        android:layout_below="@+id/editTextNote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="saveData"/>


</RelativeLayout>
