<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/for_diff_day_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and_string"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/list_item_day_two"
        android:paddingLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/for_diff_day_one"
        android:text="@string/day_two"/>

    <TextView
        android:id="@+id/list_item_day_one"
        android:paddingRight="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/for_diff_day_one"
        android:text="@string/day_one"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/for_diff_day_one"
        android:textStyle="bold"
        android:text="@string/reading"
        android:textSize="18sp"
        />





</RelativeLayout>