<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/list_item_textViewDayMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:text="@string/day"
      />

    <TextView
        android:id="@+id/list_item_textViewTimeMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/list_item_textViewDayMain"
        android:text="@string/time"
       />
    <TextView
        android:id="@+id/list_item_textViewReadingMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_textViewDayMain"
        android:textStyle="bold"
        android:text="@string/reading"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/list_item_textViewNoteMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_textViewReadingMain"
        android:text="@string/notes"
        android:textSize="12sp"/>




</RelativeLayout>