<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#fff9f9f9"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_your_meter_stats"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_three_days"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"

                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/reading_one"
                android:layout_width="wrap_content"
                android:paddingTop="3dp"
                android:layout_height="wrap_content"
                android:text="@string/val"
                android:textStyle="bold"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/reading_date_one"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/reading_two"
                android:layout_width="wrap_content"
                android:paddingTop="3dp"
                android:layout_height="wrap_content"
                android:text="@string/val"
                android:textStyle="bold"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/reading_date_two"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/reading_three"
                android:layout_width="wrap_content"
                android:paddingTop="3dp"
                android:layout_height="wrap_content"
                android:text="@string/val"
                android:textStyle="bold"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/reading_date_three"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder"
                android:paddingBottom="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recharged_statistics"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"

                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/last_time_recharged"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ago"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/recharged_statistics_got"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and_got"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/recharged_statistics_finish"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and_finish_date"
                android:paddingBottom="5dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingRight="15dp"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recharged_statistics_usages"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingBottom="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"

                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/usage_above"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usage_this_month"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/usage_state"
                android:textColor="#ff676767"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usage_state"
                android:paddingBottom="5dp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>